add_subdirectory(CramSim)
add_subdirectory(GNA)
add_subdirectory(Messier)
add_subdirectory(Opal)
add_subdirectory(Samba)
add_subdirectory(VaultSimC)
add_subdirectory(ariel)
add_subdirectory(balar)
add_subdirectory(cacheTracer)
add_subdirectory(cassini)
add_subdirectory(ember)
add_subdirectory(firefly)
add_subdirectory(hermes)
add_subdirectory(kingsley)
add_subdirectory(llyr)
add_subdirectory(memHierarchy)
add_subdirectory(mercury)
add_subdirectory(merlin)
add_subdirectory(miranda)
add_subdirectory(mmu)
add_subdirectory(osseous)
add_subdirectory(prospero)
add_subdirectory(rdmaNic)
add_subdirectory(serrano)
add_subdirectory(shogun)
add_subdirectory(simpleElementExample)
add_subdirectory(simpleSimulation)
add_subdirectory(thornhill)
add_subdirectory(vanadis)
add_subdirectory(zodiac)
