add_subdirectory(CramSim)
add_subdirectory(GNA)
add_subdirectory(Messier)
add_subdirectory(Opal)
add_subdirectory(Samba)
add_subdirectory(VaultSimC)
add_subdirectory(ariel)
# ???
# add_subdirectory(balar)
add_subdirectory(cacheTracer)
add_subdirectory(cassini)
# needs pyember.inc transformation
# add_subdirectory(ember)
# needs python transformation
# add_subdirectory(firefly)
add_subdirectory(hermes)
add_subdirectory(kingsley)
# add_subdirectory(llyr)
add_subdirectory(memHierarchy)
# sst_element_config.h
# add_subdirectory(mercury)
# needs python transformation
add_subdirectory(merlin)
# needs stake
# add_subdirectory(miranda)
add_subdirectory(mmu)
add_subdirectory(osseous)
add_subdirectory(prospero)
add_subdirectory(rdmaNic)
add_subdirectory(serrano)
add_subdirectory(shogun)
add_subdirectory(simpleElementExample)
add_subdirectory(simpleSimulation)
# needs miranda
# add_subdirectory(thornhill)
add_subdirectory(vanadis)
# need dumpi and otf
# add_subdirectory(zodiac)
