set(SRC
    ember.cc
    embercomputeev.cc
    emberconstdistrib.cc
    emberdistrib.cc
    emberengine.cc
    emberevent.cc
    embergaussdistrib.cc
    embergen.cc
    embergettimeev.cc
    embermotiflog.cc
    embermpicxtgen.cc
    libs/emberMpiLib.cc
    mpi/embermpigen.cc
    mpi/motifs/ember3damr.cc
    mpi/motifs/ember3dcommdbl.cc
    mpi/motifs/emberBFS.cc
    mpi/motifs/emberNtoM.cc
    mpi/motifs/emberTrafficGen.cc
    mpi/motifs/emberallgather.cc
    mpi/motifs/emberallgatherv.cc
    mpi/motifs/emberallpingpong.cc
    mpi/motifs/emberallreduce.cc
    mpi/motifs/emberalltoall.cc
    mpi/motifs/emberalltoallv.cc
    mpi/motifs/emberbarrier.cc
    mpi/motifs/emberbcast.cc
    mpi/motifs/emberbipingpong.cc
    mpi/motifs/embercmt1d.cc
    mpi/motifs/embercmt2d.cc
    mpi/motifs/embercmt3d.cc
    mpi/motifs/embercmtcr.cc
    mpi/motifs/embercomm.cc
    mpi/motifs/emberdetailedring.cc
    mpi/motifs/emberdetailedstream.cc
    mpi/motifs/emberfft3d.cc
    mpi/motifs/emberfini.cc
    mpi/motifs/emberhalo1d.cc
    mpi/motifs/emberhalo2d.cc
    mpi/motifs/emberhalo2dNBR.cc
    mpi/motifs/emberhalo3d.cc
    mpi/motifs/emberhalo3d26.cc
    mpi/motifs/emberhalo3dsv.cc
    mpi/motifs/emberincast.cc
    mpi/motifs/emberinit.cc
    mpi/motifs/emberlqcd.cc
    mpi/motifs/embermsgrate.cc
    mpi/motifs/embernaslu.cc
    mpi/motifs/embernull.cc
    mpi/motifs/emberotf2.cc
    mpi/motifs/emberpingpong.cc
    mpi/motifs/emberrandomgen.cc
    mpi/motifs/emberreduce.cc
    mpi/motifs/emberring.cc
    mpi/motifs/emberscatter.cc
    mpi/motifs/emberscatterv.cc
    mpi/motifs/embersendrecv.cc
    mpi/motifs/embersiriustrace.cc
    mpi/motifs/emberstop.cc
    mpi/motifs/embersweep2d.cc
    mpi/motifs/embersweep3d.cc
    mpi/motifs/embertest.cc
    mpi/motifs/embertestany.cc
    mpi/motifs/embertricount.cc
    mpi/motifs/emberunstructured.cc
    mpi/motifs/emberwaitany.cc
    shmem/emberShmemGen.cc
    sirius/libsirius/libsirius.cc
    # tools
)

add_library(ember ${SRC})
target_link_libraries(ember SST::SSTCore)
