set(SRC
    ctrlMsg.cc
    ctrlMsgProcessQueuesState.cc
    funcSM/allgather.cc
    funcSM/alltoallv.cc
    funcSM/cancel.cc
    funcSM/collectiveTree.cc
    funcSM/commCreate.cc
    funcSM/commSplit.cc
    funcSM/gatherv.cc
    funcSM/recv.cc
    funcSM/scatterv.cc
    funcSM/send.cc
    funcSM/test.cc
    funcSM/testany.cc
    funcSM/wait.cc
    funcSM/waitAll.cc
    funcSM/waitAny.cc
    functionSM.cc
    hades.cc
    hadesMP.cc
    hadesSHMEM.cc
    libfirefly.cc
    loopBack.cc
    nic.cc
    nicEntryBase.cc
    nicMsgStream.cc
    nicRdmaStream.cc
    nicRecvCtx.cc
    nicRecvMachine.cc
    nicRecvStream.cc
    nicSendMachine.cc
    nicShmem.cc
    nicShmemMove.cc
    nicShmemStream.cc
    nicTester.cc
    shmem/alltoall.cc
    shmem/alltoalls.cc
    shmem/barrier.cc
    shmem/broadcast.cc
    shmem/collect.cc
    shmem/common.cc
    shmem/fcollect.cc
    shmem/reduction.cc
    virtNic.cc
)

add_library(firefly ${SRC})
target_link_libraries(firefly SST::SSTCore)
